@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2012, 2020 Original authors and others.
+ * Copyright (c) 2012, 2024 Original authors and others.
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -44,7 +44,7 @@ public class DoubleValueGenerator implements IValueGenerator {
 
     @Override
     public Object newValue(Random random) {
-        return new Double(this.floor + random.nextInt(this.range - 1)
+        return Double.valueOf(this.floor + random.nextInt(this.range - 1)
                 + random.nextDouble());
     }
 
